nenolod     2005/10/12 21:40:43 UTC	(20051012-2859)
  Log:
  - Fix a compile warning here.
  

  Changes:	Modified:
  +1 -1		trunk/src/confparse.c (File Modified) 


jilles      2005/10/12 21:37:34 UTC	(20051012-2857)
  Log:
  Bail out of chanuser_add() if channel is NULL. This avoids
  crashes with !channels with ircnet ircd, for example.
  

  Changes:	Modified:
  +3 -0		trunk/src/node.c (File Modified) 


jilles      2005/10/12 21:19:57 UTC	(20051012-2855)
  Log:
  Fix chanserv rejoining on kick, as in protocol/charybdis.c 2397
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2005/10/12 11:05:25 UTC	(20051012-2853)
  Log:
  Show origin of CLEAR USERS command in kick reason.
  

  Changes:	Modified:
  +6 -3		trunk/modules/chanserv/clear_users.c (File Modified) 


jilles      2005/10/12 10:16:33 UTC	(20051012-2851)
  Log:
  Avoid kicking any services on /cs clear users, not just chanserv.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


pfish       2005/10/12 09:49:01 UTC	(20051012-2849)
  Log:
  bugfix
  

  Changes:	Modified:
  +2 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


nenolod     2005/10/11 22:17:11 UTC	(20051011-2847)
  Log:
  Unbreak. >_<.
  

  Changes:	Modified:
  +4 -3		trunk/configure (File Modified) 
  +1 -2		trunk/modules/memoserv/Makefile.in (File Modified) 


kog         2005/10/11 12:45:45 UTC	(20051011-2845)
  Log:
  added help dir for helpserv
  

  Changes:	Modified:
  + -		trunk/help/helpserv/ (File Added) 


kog         2005/10/11 12:44:34 UTC	(20051011-2843)
  Log:
  added version tracking... forgot to set
  
  

  Changes:	Modified:
  + -		trunk/modules/helpserv/Makefile.in  (Property Modified)
  + -		trunk/modules/helpserv/help.c  (Property Modified)
  + -		trunk/modules/helpserv/main.c  (Property Modified)


kog         2005/10/11 12:42:06 UTC	(20051011-2841)
  Log:
  initial helpserv commit - Kog
  

  Changes:	Modified: