@@ -1,3 +1,11 @@
+nenolod     2005/10/12 22:53:56 UTC	(20051012-2861)
+  Log:
+  Make sure there's a hostbuf in AKILL.
+
+  Changes:	Modified:
+  +8 -1		trunk/modules/operserv/akill.c (File Modified) 
+
+
 nenolod     2005/10/12 21:40:43 UTC	(20051012-2859)
   Log:
   - Fix a compile warning here.
